--- a/Assignment3:OCR/app/src/main/res/layout/activity_main.xml
+++ b/Assignment3:OCR/app/src/main/res/layout/activity_main.xml
@@ -1,49 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".MainActivity">
-
-    <ImageView
-            android:id="@+id/selectedImageView"
-            android:layout_width="309dp"
-            android:layout_height="200dp"
-            android:scaleType="centerInside"
-            android:adjustViewBounds="true" android:layout_marginTop="31dp"
-            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="51dp" android:layout_marginEnd="51dp"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="24dp"
-            app:layout_constraintBottom_toTopOf="@+id/selectImageButton"/>
-    <Button
-            android:text="Select Image"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/selectImageButton"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="140dp"
-            android:layout_marginEnd="140dp" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/selectedImageView"
-            android:layout_marginBottom="5dp" app:layout_constraintBottom_toTopOf="@+id/ocrResultTextView"/>
-    <TextView
-            android:text="OCR Analytics"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/textView"
-            android:textSize="25sp" app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="52dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="126dp" android:layout_marginEnd="127dp"
-            app:layout_constraintEnd_toEndOf="parent"/>
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="#716E5A"
+    tools:context=".MainActivity">
 
     <TextView
-        android:id="@+id/ocrResultTextView"
-        android:layout_width="309dp"
-        android:layout_height="270dp"
-        android:layout_marginStart="51dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginEnd="51dp"
-        android:layout_marginBottom="90dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:id="@+id/titleTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:text="OCR Analytics"
+        android:textColor="#171616"
+        android:textSize="28sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/selectImageButton" />
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/selectedImageView"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginTop="16dp"
+        android:adjustViewBounds="true"
+        android:scaleType="centerCrop"
+        app:layout_constraintDimensionRatio="16:9"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/titleTextView" />
+
+    <Button
+        android:id="@+id/selectImageButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="Select Image"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/selectedImageView" />
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/selectImageButton">
+
+        <TextView
+            android:id="@+id/ocrResultTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#EADFDF"
+            android:padding="16dp"
+            android:text="OCR Analytics Results:"
+            android:textColor="#000000"
+            android:textSize="16sp" />
+
+    </ScrollView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
